<resources>
    <string name="app_name">EcoLuz</string>
    <string name="status_icon_description">Estado de la conexión</string>
    <string name="settings_icon_description">Configuración</string>
    <string name="alarm_test">Simular Lectura</string>
    <string name="ltimas_alarmas">Últimas Alarmas</string>
    <string name="conectado">Conectado</string>
    <string name="descripcion">Monitoreo Inteligente de Luz Ambiental</string>
    <string name="powered_by_tritech">Powered by TriTech</string>
    <string name="empezar">Empezar</string>
    <string name="tu_correo">Tu correo</string>
    <string name="tu_contrase_a">Tu contraseña</string>
    <string name="logo">Logo</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresa_tus_credenciales_para_acceder">Ingresa tus credenciales para acceder</string>
    <string name="email">Email</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="los_datos_se_mostrar_n_aqu">Los datos se mostrarán aquí</string>
    <string name="mostrar_datos">Mostrar Datos</string>
    <string name="los_datos_se_mostraran_aqui">Los datos se mostraran aqui</string>
    <string name="datos">Datos</string>
    <string name="autor_libro">Autor Libro</string>
    <string name="btn_guardar">Guardar Datos</string>
    <string name="btn_mostrar">Mostrar Datos</string>
    <string name="registros">Registros</string>
    <string name="textV_datos">"Guardar Y Mostrar Datos "</string>
    <string name="nombre_libro">Nombre Libro</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="btn_back_tercera">Volver</string>
    <string name="volver_atras" />
    <string name="volver">Volver</string>
    <string name="btn_back_primera"></string>">
    <string name="btn_tercera"></string>
    <string name="volver2">volver</string>
    <string name="ir">ir</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="simular_lectura">Simular Lectura</string>
    <string name="conectar_bluetooth">Conectar Bluetooth</string>
    <string name="selecciona_el_intervalo_de_lectura">Selecciona el Intervalo de Lectura</string>
    <string name="_10_segundos">10 segundos</string>
    <string name="_30_segundos">30 segundos</string>
    <string name="_60_segundos">60 segundos</string>
    <string name="guardar">Guardar</string>
</resources>