<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_el_intervalo_de_lectura"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <RadioGroup
        android:id="@+id/intervalGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/interval10s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_segundos"
            />

        <RadioButton
            android:id="@+id/interval30s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30_segundos" />

        <RadioButton
            android:id="@+id/interval60s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_60_segundos" />
    </RadioGroup>

    <Button
        android:id="@+id/saveIntervalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="16dp"
        android:backgroundTint="#6200EE"
        android:textColor="#FFFFFF" />
</LinearLayout>
