<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradiante"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/registro_de_usuario"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:textColorHint="#D3D3D3"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:textColorHint="#D3D3D3"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="#D3D3D3"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0785F4"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:textColorHint="#F4ECEC"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
