<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#163DA1"
    android:label="@string/datos"
    tools:context=".TerceraActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/textV_datos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_libro"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#ABACAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/autor_libro"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#ABACAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#09C83F"
        android:text="@string/btn_guardar"
        android:textColor="#FFFFFF"
        app:icon="@android:drawable/ic_menu_save"
        app:iconSize="28dp"
        app:iconTint="#EDEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAutor" />

    <Button
        android:id="@+id/btn_mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#C35555"
        android:text="@string/btn_mostrar"
        android:textColor="#000000"
        app:icon="@android:drawable/ic_menu_view"
        app:iconSize="28dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guardar" />


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_back_segunda"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            app:icon="?attr/actionModeCloseDrawable"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/gray"
            />

        <Space
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_cuarta"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tercera"
            android:textColor="@color/white"
            app:icon="@drawable/ic_arrow_forward"
            app:iconPadding="5dp"
            app:iconSize="24dp"
            app:iconTint="@color/button_bar_background"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="369dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/scrollview_border"
        android:paddingStart="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mostrar"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_Libros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/los_datos_se_mostraran_aqui"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
